--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
+
+html {
+    font-family: 'DM Sans', sans-serif;
+}
+
+@font-face {
+    font-family: reey;
+    src: url('./Font/Reey-Regular.otf');
+}
+
+:root {
+    --white: #fff;
+    --text-color: #757783;
+    --black: #313041;
+    --red: #e8604c;
+    --bg-element: #faf5ee;
+    --orange: #ffa801;
+    --text-colord9: #9d9d9d;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 16px;
+    line-height: 18px;
+}
+
 .App {
-  text-align: center;
+    width: 100%;
+    min-height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+    color: var(--white);
+    background-color: var(--red);
+    padding: 16px 26px;
+    font-size: 11px;
+    letter-spacing: 0.5px;
+    border: none;
+    cursor: pointer;
 }
