--- a/src/Component/Banner/Banner.scss
+++ b/src/Component/Banner/Banner.scss
@@ -41,19 +41,336 @@
                 color: var(--red);
                 font-family: 'reey';
             }
-
-            img {
+            .Banner__slide-content-img {
                 position: absolute;
+                height: 30px;
+                width: 400px;
                 top: 45px;
                 right: 29%;
+                overflow: hidden;
+                img {
+                    position: absolute;
+                    // left: 100;
+                }
             }
 
-            span {
+            .Banner__slide-content-question {
                 color: var(--white);
                 font-size: 2.6rem;
                 font-weight: 500;
                 display: inline-block;
                 margin-top: 80px;
+                position: absolute;
+                left: 36%;
+                top: 16px;
+            }
+        }
+    }
+}
+.active {
+    .Banner__slide-content {
+        h4 {
+            animation: opacity 0.6s ease;
+        }
+        h4:before {
+            content: '';
+            display: block;
+            background-color: var(--white);
+            position: absolute;
+            height: 100px;
+            left: 28%;
+            top: -50px;
+            animation: withRight 0.6s ease 0.3s;
+        }
+
+        h4:after {
+            content: '';
+            display: block;
+            background-color: var(--white);
+            position: absolute;
+            height: 100px;
+            // width: 800px;
+            left: 28%;
+            top: -50px;
+            animation: withLeft 0.3s ease;
+        }
+        @keyframes withLeft {
+            from {
+                width: 0px;
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+                width: 800px;
+            }
+        }
+
+        @keyframes withRight {
+            from {
+                width: 800px;
+            }
+            to {
+                width: 0px;
+            }
+        }
+
+        @keyframes opacity {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        .Banner__slide-content-img {
+            img {
+                animation: img 0.6s ease forwards;
+            }
+        }
+
+        @keyframes img {
+            from {
+                right: 100%;
+            }
+            to {
+                right: 0;
+            }
+        }
+        .Banner__slide-content-question {
+            animation: questionOpacity 1.6s ease, up 0.5s ease;
+        }
+        .Banner__slide-content-question:before {
+            position: absolute;
+            content: '';
+            background-color: var(--white);
+            width: 100%;
+            top: -10px;
+            animation: questionDown 0.6s ease;
+        }
+        .Banner__slide-content-question::after {
+            position: absolute;
+            content: '';
+            background-color: var(--white);
+            width: 100%;
+            top: -10px;
+            left: 0;
+            animation: questionUp 0.6s ease;
+            animation-delay: 0.6s;
+        }
+        @keyframes up {
+            from {
+                top: 26px;
+            }
+            to {
+                top: 16px;
+            }
+        }
+
+        @keyframes questionDown {
+            from {
+                height: 0px;
+            }
+            to {
+                height: 50px;
+            }
+        }
+
+        @keyframes questionUp {
+            from {
+                height: 50px;
+            }
+            to {
+                height: 0px;
+            }
+        }
+
+        @keyframes questionOpacity {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+    }
+}
+
+.actived {
+    .Banner__slide-content {
+        h5 {
+            position: absolute;
+            top: -60px;
+            font-size: 3.2rem;
+            font-family: 'reey';
+            color: var(--red);
+            opacity: 0;
+            animation: activedH5 0.6s ease forwards, opacityh5 0.5s ease 0.6s forwards;
+            @keyframes activedH5 {
+                from {
+                    left: 35%;
+                    opacity: 0;
+                }
+                to {
+                    left: 22%;
+                }
+            }
+
+            @keyframes opacityh5 {
+                from {
+                    opacity: 0;
+                }
+                to {
+                    opacity: 1;
+                }
+            }
+
+            &::before {
+                content: '';
+                height: 80px;
+                top: -34px;
+                width: 200px;
+                background-color: var(--white);
+                position: absolute;
+                animation: h5before 0.5s ease 0.6s forwards;
+            }
+
+            @keyframes h5before {
+                from {
+                    width: 200px;
+                }
+                to {
+                    width: 0px;
+                }
+            }
+        }
+
+        .Banner__slide-content-img-1 {
+            position: relative;
+            height: 30px;
+            width: 400px;
+            overflow: hidden;
+            top: 50px;
+            left: 44%;
+
+            img {
+                position: absolute;
+                width: 100%;
+                left: -100%;
+                animation: img 0.3s ease 1.8s forwards;
+            }
+
+            @keyframes img {
+                from {
+                    left: -100%;
+                }
+                to {
+                    left: 0%;
+                }
+            }
+        }
+
+        .Banner__slide-inner-content1 {
+            position: relative;
+            overflow: hidden;
+            height: 100px;
+            display: flex;
+            align-items: center;
+            width: 45%;
+            top: -60px;
+            left: 20%;
+
+            .content {
+                font-size: 4.4rem;
+                color: var(--white);
+                font-weight: 500;
+                position: absolute;
+                display: block;
+                left: -100%;
+                animation: content1s 0.4s ease 1s forwards;
+
+                &::before {
+                    content: '';
+                    height: 80px;
+                    background-color: var(--white);
+                    position: absolute;
+                    animation: content1s 0.4s ease 1s forwards, content2s 0.4s ease 1.4s forwards;
+                    width: 100%;
+                    top: -25px;
+                    left: -100%;
+                }
+
+                @keyframes content1s {
+                    from {
+                        left: -100%;
+                    }
+                    to {
+                        left: 0%;
+                    }
+                }
+                @keyframes content2s {
+                    from {
+                        left: 0%;
+                    }
+                    to {
+                        left: 105%;
+                    }
+                }
+            }
+        }
+
+        .Banner__slide-content-amount {
+            color: var(--white);
+            font-size: 18px;
+            font-weight: 500;
+            position: relative;
+            left: 20%;
+            top: -50px;
+            letter-spacing: 2px;
+            overflow: hidden;
+            height: 20px;
+            width: 32%;
+            display: block;
+
+            .inner-amount {
+                display: flex;
+                align-items: center;
+                position: absolute;
+                top: 20px;
+                animation: amountUP 0.4s ease 2s forwards;
+
+                span {
+                    color: var(--red);
+                    cursor: pointer;
+                }
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    height: 20px;
+                    width: 100%;
+                    background-color: aliceblue;
+                    top: 20px;
+                    animation: amountUP 0.3s ease 2s, amountDown 0.4s ease 2.3s forwards;
+                }
+
+                @keyframes amountUP {
+                    from {
+                        top: 20px;
+                    }
+                    to {
+                        top: 0px;
+                    }
+                }
+
+                @keyframes amountDown {
+                    from {
+                        top: 0px;
+                    }
+                    to {
+                        top: -20px;
+                    }
+                }
             }
         }
     }
