--- a/src/Component/Title/Title.scss
+++ b/src/Component/Title/Title.scss
@@ -4,6 +4,8 @@
     .Title__inner {
         display: flex;
         flex-direction: column;
+        position: relative;
+        z-index: 5;
 
         .Title__type {
             font-family: 'reey';
