--- a/src/Component/Benefit/Benefit.scss
+++ b/src/Component/Benefit/Benefit.scss
@@ -1,3 +1,9 @@
+.Benefit__wrapper {
+    width: 100%;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
 .Benefit__left {
     background-image: url('./../../assets/img/bg-2.jpg');
     background-repeat: no-repeat;
@@ -26,9 +32,14 @@
     }
 
     .Benefit__right-title {
+        position: relative;
         .Title__note {
             color: var(--white);
         }
+    }
+
+    .Benefit__right-paragraph {
+        position: relative;
     }
     p {
         color: #a9a8b6;
@@ -39,6 +50,7 @@
 }
 
 .Benefit__right-container {
+    position: relative;
     margin-top: 16px;
 
     .Benefit__right-container-content {
