--- a/src/Component/Gallery/Gallery.scss
+++ b/src/Component/Gallery/Gallery.scss
@@ -36,6 +36,7 @@
 
 .Gallery__container {
     position: relative;
+    cursor: pointer;
     .Gallery__container-img {
         width: 100%;
         border-radius: 12px;
