--- a/src/Component/Header/Header.scss
+++ b/src/Component/Header/Header.scss
@@ -1,13 +1,13 @@
 .Header__wrapper {
     width: 100%;
-    position: sticky;
     background-color: var(--white);
-    z-index: 2;
+    box-shadow: 0 10px 10px 2px rgba(0, 0, 0, 0.1);
+    z-index: 20;
 }
 
 .Header__inner {
     max-width: 1140px;
-    padding: 0 15px;
+    padding: 12px 15px;
     margin: auto;
     display: flex;
     justify-content: space-between;
@@ -125,26 +125,139 @@
 
     .Header__icon {
         color: var(--text-color);
+        display: flex;
+        align-items: center;
+
+        .Header__icon-search,
+        .Header__icon-user {
+            .H_search,
+            .H_user {
+                font-size: 18px;
+                cursor: pointer;
+                padding: 10px 14px;
+                border-radius: 50%;
+                background-color: var(--bg-element);
+                font-weight: 300;
+
+                &:hover {
+                    color: var(--red);
+                }
+            }
+        }
+
+        .active {
+            color: var(--red);
+        }
+
+        .Header__active {
+            color: var(--red);
+        }
+    }
+}
+.Header__icon-search {
+    margin-right: 12px;
+    position: relative;
+
+    .Header__icon-search-form {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        padding: 14px 16px;
+        background-color: var(--white);
+        border-radius: 6px;
+        right: -20px;
+        top: 55px;
+        box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
+        z-index: 1;
+        transition: transform 0.2s ease;
+
+        @keyframes scaleUse {
+            to {
+            }
+        }
+
+        &::after {
+            content: '';
+            display: block;
+            position: absolute;
+            border: 10px solid;
+            top: -20px;
+            right: 32px;
+            border-color: transparent transparent var(--bg-element) transparent;
+        }
 
         svg {
-            font-size: 18px;
+            background-color: transparent;
+            position: absolute;
+            right: 30px;
+            top: 28px;
+            color: var(--red);
             cursor: pointer;
+        }
+
+        .search-input {
+            padding: 12px 6px;
+            border: 2px solid var(--bg-element);
+            outline: none;
+            font-size: 16px;
+        }
+    }
+}
+
+.Header__icon-user {
+    position: relative;
+    .Header__icon-user-form {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        background-color: var(--white);
+        border-radius: 6px;
+        box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
+        padding: 12px 10px;
+        width: 210px;
+        right: -35px;
+        top: 58px;
+        transition: transform 0.2s ease;
+        z-index: 2;
+
+        @keyframes scaleUse {
+            to {
+            }
+        }
+
+        &::before {
+            position: absolute;
+            content: '';
+            display: block;
+            border: 10px solid;
+            top: -20px;
+            right: 46px;
+            border-color: transparent transparent var(--bg-element) transparent;
+        }
+
+        .Header__login,
+        .Header__register {
+            display: flex;
+            align-items: center;
+            padding: 2px 0;
+            cursor: pointer;
+
+            svg {
+                background-color: transparent;
+                padding: 6px 0;
+                width: 50px;
+            }
 
             &:hover {
                 color: var(--red);
             }
         }
 
-        & > :nth-child(1) {
-            margin-right: 32px;
-        }
-
-        & > :nth-child(2) {
-            margin-right: 12px;
-        }
-
-        .Header__active {
-            color: var(--red);
+        .Header__login {
+            svg {
+                width: 44px;
+                margin-right: 6px;
+            }
         }
     }
 }
