--- a/src/Component/Description/Description.scss
+++ b/src/Component/Description/Description.scss
@@ -18,6 +18,7 @@
         display: inline-block;
         border-radius: 10px;
         margin-left: 12px;
+        cursor: pointer;
 
         &::before {
             content: '';
