--- a/src/App.css
+++ b/src/App.css
@@ -52,17 +52,32 @@ ul {
 }
 
 .input {
-    padding: 24px 30px;
-    text-align: center;
+    padding: 24px 16px;
     outline: none;
     border: none;
     border-radius: 8px;
     font-size: 16px;
-    font-weight: 600;
+    background-color: var(--bg-element);
 }
 
 ::placeholder {
     color: var(--text-color3);
     font-size: 14px;
     letter-spacing: 0.5px;
+}
+.textarea {
+    border: none;
+    padding: 16px;
+    background-color: var(--bg-element);
+    margin: 0 10px 18px 4px;
+    font-size: 16px;
+    color: var(--text-color);
+    border-radius: 8px;
+    outline: none;
+    width: 100%;
+    min-height: 200px;
+}
+a {
+    text-decoration: none;
+    color: var(--text-color);
 }
