--- a/src/Component/Header/Header.scss
+++ b/src/Component/Header/Header.scss
@@ -7,7 +7,7 @@
 
 .Header__inner {
     max-width: 1140px;
-    padding: 12px 15px;
+    padding: 12px 15px 0;
     margin: auto;
     display: flex;
     justify-content: space-between;
@@ -89,7 +89,7 @@
     border-radius: 6px;
     top: 104%;
     left: 0;
-    width: 300px;
+    width: 230px;
     text-align: left;
     list-style: none;
     padding: 0 12px;
@@ -99,7 +99,7 @@
     z-index: 8;
     background-color: var(--white);
 
-    * {
+    > * {
         padding: 0;
         position: absolute;
         border: none;
