--- a/src/Component/Footer/Footer.scss
+++ b/src/Component/Footer/Footer.scss
@@ -80,3 +80,23 @@
         }
     }
 }
+
+@media (max-width: 710px) {
+    .Footer__wrapper {
+        .Footer__inner {
+            .Footer__container {
+                display: flex;
+                flex-direction: column;
+                .Footer__left {
+                    width: 100%;
+                    border-bottom: 1px solid var(--text-color);
+                }
+
+                .Footer__note {
+                    padding: 26px 0;
+                    font-size: 20px;
+                }
+            }
+        }
+    }
+}
