--- a/src/Component/Header/Header.scss
+++ b/src/Component/Header/Header.scss
@@ -261,3 +261,12 @@
         }
     }
 }
+
+@media (max-width: 710px) {
+    .Header__wrapper {
+        padding: 20px 15px;
+    }
+    .Header__list-item {
+        display: none;
+    }
+}
