--- a/src/Component/Header/Header.scss
+++ b/src/Component/Header/Header.scss
@@ -30,11 +30,11 @@
 
 .Header__list-item {
     .Header__main-item {
+        position: relative;
         list-style: none;
         display: flex;
         color: var(--text-color);
         font-weight: 500;
-        align-items: center;
 
         > * {
             margin: 0 24px;
@@ -71,9 +71,13 @@
                 margin-left: 4px;
             }
         }
-        .Header__active {
-            color: var(--black);
-            border-bottom: 3px solid var(--red);
+        .icon-close-list {
+            position: absolute;
+            top: 0;
+            right: 0;
+            .icon-close-list-x {
+                font-size: 26px;
+            }
         }
     }
 }
@@ -152,6 +156,20 @@
         .Header__active {
             color: var(--red);
         }
+    }
+}
+.Header__icon-menu {
+    font-size: 18px;
+    cursor: pointer;
+    padding: 12px 14px;
+    border-radius: 50%;
+    background-color: var(--bg-element);
+    font-weight: 300;
+    margin-left: 12px;
+    display: none;
+
+    &:hover {
+        color: var(--red);
     }
 }
 .Header__icon-search {
@@ -267,6 +285,43 @@
         padding: 20px 15px;
     }
     .Header__list-item {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0, 0, 0, 0.6);
+        z-index: 5;
+
+        .Header__main-item {
+            position: fixed;
+            display: flex;
+            flex-direction: column;
+            background-color: var(--white);
+            left: -72%;
+            top: 0;
+            bottom: 0;
+            transition: left 0.5s ease;
+
+            > * {
+                text-align: left;
+            }
+        }
+    }
+
+    .Header__home-list,
+    .Header__tour-list,
+    .Header__destination-list,
+    .Header__news-list,
+    .Header__page-list {
+        position: static;
+    }
+
+    .H_search {
         display: none;
+    }
+
+    .Header__icon-menu {
+        display: block;
     }
 }
